Block contacts when denying requests

This prevents them from reappearing

BUG: 297994
REVIEW: 114671
FIXED-IN: 0.7.1